# Documnent-freshness-auditor-agent

./: .gitmodules  README.md  freshness_audit_report.md  freshness_auditor.db  freshness_auditor.db-shm  freshness_auditor.db-wal  output.txt  pyproject.toml
eval/: __init__.py  dataset.py  eval_config.py  eval_run.py
run_20260220_170021/: freshness_audit_report.md
src/document_freshness_auditor/: api.py  crew.py  db.py  hitl.py  main.py
src/document_freshness_auditor/config/: agents.yaml  tasks.yaml
src/document_freshness_auditor/demo-project/: README.md  api.py  calculator.py  openapi.yaml  utils.py
src/document_freshness_auditor/demo-project/docs/: SRS.md  architecture.md
src/document_freshness_auditor/tools/: __init__.py  doc_tools.py  freshness_scorer.py
